k8s/local/gateways/remote-devnet/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: chicmoz-gateway
  namespace: chicmoz
  labels:
    app.kubernetes.io/name: chicmoz-gateway
    app.kubernetes.io/part-of: chicmoz-local
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: api-remote-devnet
      hostname: api.remote-devnet.chicmoz.localhost
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: ui-remote-devnet
      hostname: remote-devnet.chicmoz.localhost
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: ws-remote-devnet
      hostname: ws.remote-devnet.chicmoz.localhost
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: swagger
      hostname: swagger.chicmoz.localhost
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: dashboard
      hostname: dashboard.chicmoz.localhost
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: kafka
      hostname: kafka.localhost
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
